src/styles/style.css
@import '../../node_modules/react-modal-video/css/modal-video.min.css';

@media screen and (min-width: 1140px) {
  .portfolio .project-list > li {
    display: inline-block;
  }
  .project-list > li:nth-child(even) {
    margin-left: 30px;
  }
}

@media screen and (min-width: 1420px) {
  .project-list {
    width: 1400px;
    margin: auto;
  }
}

body {
  font-family: 'Whitney SSm A','Whitney SSm B';
  font-style: normal;
  font-weight: 300;
  color: #fefefec4;
  background-color: #2e363b
}

.headshot {
  border-radius: 50px;
  width: 100px;
  filter: grayscale(100%);
  margin-bottom: 20px
}

.header {
  padding-top: 100px;
  text-align: center;
  width: 60%;
  margin: auto;
  padding-bottom: 80px
}

.heart {
  color: #ff2020;
  display: inline-block;
  -webkit-transform: scaleX(1.2);
  -moz-transform: scaleX(1.2);
  -ms-transform: scaleX(1.2);
  -o-transform: scaleX(1.2);
  transform: scaleX(1.2);
  padding: 0 10px
}

.header p {
  margin-top: 20px;
  line-height: 1.5em
}

.highlight {
  color: #568fffcc
}

.portfolio {
  background-color: #e4f1f9;
  color: #2e363b;
  padding: 40px 20px;
  text-align: center;
  font-family: 'Whitney SSm A','Whitney SSm B';
  font-style: normal;
  font-weight: 400;
  line-height: 1.2em
}

.portfolio li {
  width: 500px;
  margin: 0 auto;
  margin-bottom: 50px
}

div.heading {
  font-size: 1.5em;
  margin-bottom: 40px;
  font-family: 'Whitney SSm SmallCaps A','Whitney SSm SmallCaps B';
  font-style: normal;
  font-weight: 400;
  padding-bottom: 0
}

.title {
  font-size: .8em;
  margin-bottom: 10px;
  line-height: 1.3em;
  padding-bottom: 5px;
  padding-left: 10px;
}

/* .skills h2 {
  font-size: 1.2em;
  margin-bottom: 6px
} */
/* 
.skills li {
  line-height: 1.3em
} */

/* .skills section {
  box-sizing: border-box;
  margin-bottom: 10px;
  margin-top: 20px
} */

/* .skills {
  width: 90%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: flex-start;
  margin: 0 auto
} */

.info-box .title {
  padding-top: 6px;
  margin-bottom: 0;
  background-color: #000000ba;
  color: white;
}

.portfolio img {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.image-box, .info-box {
  background-color: #dcdcdc;
  width: 500px;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  color: #2e363b
}

.image-box li {
  margin-left: 0;
}

.description, .image-box, .info-box {
  margin: 0 auto;
  text-align: left;
}

.image-box {
  height: 304px;
}

.description {
  font-size: .7em;
  padding: 5px 10px 5px;
}

.info-box i {
  padding-right: 3px;
  vertical-align: middle
}

.header a:not(:first-child) {
  padding-left: 20px
}

.header a:last-child {
  padding-right: 0px;
}

.info-box a,.profile-links a {
  color: #8de9ff;;
  padding-right: 17px;
  font-size: .8em;
  text-decoration: none
}

.profile-links i {
  transition: all .2s ease;  
  font-size: 1.3em;
  color: #FF5722;
  padding: 4px 5px;
  border-radius: 3px;
  background-color: #ffffff;
  margin-right: 3px;
}

.profile-links a:hover > i {
  transition: all .3s ease;  
  color: #ffffff;
  background-color: #FF5722;
}

.info-box a:hover,.profile-links a:hover {
  transition: all .3s ease;
  color: #FF9800;
}

.youtube-link a {
  transition: all .2s ease;  
  color: #ff2020;
}

.external-links {
  float: right;
  margin-top: 3px;
}

.youtube-link {
  display: inline
}

.skills {
  text-align: center;
  width: 60%;
  margin: 50px auto;
}

.skills div.heading {
  color: #f5f5f5;
  font-family: 'Whitney SSm A','Whitney SSm B';
  margin-bottom: 10px;
}

.skills li {
  display: inline-block;
  padding: 1em;
  font-size: .8em;
}

a {
  color: #2695fd
}

a:hover {
  transition: all .3s ease;
  color: #00bcd4;
}

.arrow_box {
  position: absolute;
  margin-top: -50px;
  background: #292929;
  border: 1px solid #356486;
  padding: 10px;
  border-radius: 2px;
}
.arrow_box:after, .arrow_box:before {
	top: 100%;
	left: 50%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}

.arrow_box:after {
	border-color: rgba(41, 41, 41, 0);
	border-top-color: #292929;
	border-width: 8px;
	margin-left: -8px;
}
.arrow_box:before {
	border-color: rgba(0, 0, 0, 0);
	border-top-color: #356486;
	border-width: 9px;
	margin-left: -9px;
}

.bullets {
  transition: all .2s ease;
  opacity: 0;
  float: right;
  z-index: 1;
  width: 500px;
  position: absolute;
  background-color: #133542e0;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  padding-top: 30px;
  height: 274px;
  font-weight: 300;
}

.bullets:hover {
  opacity: 1;
  transition: all .3s ease;
}

.bullets li {
  margin-bottom: 18px;
  color: #fffffff0;
  padding: 0 20px;
  width: 460px;
  font-size: .8em;
}

